set the evaluation folder name

--- a/FYP_dental_desiese.ipynb
+++ b/FYP_dental_desiese.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1477,7 +1477,7 @@
     }
    ],
    "source": [
-    "!python tools/eval.py --weights runs/train/enhanced/weights/best_ckpt.pt --data data/dataset.yaml --device 0 --do_pr_metric True --do_coco_metric False"
+    "!python tools/eval.py --weights runs/train/enhanced/weights/best_ckpt.pt --data data/dataset.yaml --device 0 --do_pr_metric True --do_coco_metric False --name enhanced"
    ]
   },
   {
